# Projeto_C14

./: .gitignore  README.md  estoque.json  main.py  pyproject.toml
.github/workflows/: ci.yml  pipeline_C14.yml
scripts/: install_tools.sh  send_email.py
src/: main.py
src/painel/: estoque.py
tests/: test_estoque.py
