[project]
name = "painel"
version = "0.1.0"
description = ""
authors = [
    {name = "Andre",email = "andreaugusto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "tinydb (>=4.8.2,<5.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry]
packages = [{include = "painel", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-mock (>=3.15.1,<4.0.0)"
]
